Laboratories/Lab_7/ex_1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EMPTY
    newline
    ws

Grammar

Rule 0     S' -> prog
Rule 1     prog -> decl_list stmt_list
Rule 2     decl_list -> decl_list decl
Rule 3     decl_list -> <empty>
Rule 4     decl -> type var_list S
Rule 5     decl -> type error S
Rule 6     decl -> type var_list error
Rule 7     type -> INT_TYPE
Rule 8     type -> DOUBLE_TYPE
Rule 9     m_copy -> empty
Rule 10    var_list -> var
Rule 11    var_list -> var_list CM m_copy var
Rule 12    var -> ID
Rule 13    var -> ID SO INT SC
Rule 14    stmt_list -> stmt_list stmt
Rule 15    stmt_list -> stmt
Rule 16    stmt_list -> error stmt
Rule 17    stmt -> if
Rule 18    stmt -> while
Rule 19    stmt -> assignment
Rule 20    stmt -> print
Rule 21    stmt -> BO stmt_list BC
Rule 22    stmt -> BO stmt_list error BC
Rule 23    stmt -> BO error BC
Rule 24    stmt -> error S
Rule 25    assignment -> id S
Rule 26    assignment -> id EQ exp S
Rule 27    assignment -> id EQ error S
Rule 28    assignment -> error EQ exp S
Rule 29    assignment -> id EQ exp error
Rule 30    print -> PRINT id S
Rule 31    print -> PRINT error S
Rule 32    if -> IF if_condition nt0_if stmt ELSE nt1_if stmt
Rule 33    if -> IF if_condition nt0_if stmt
Rule 34    if -> IF if_condition nt0_if stmt error nt1_if stmt
Rule 35    if_condition -> RO exp RC
Rule 36    if_condition -> RO error RC
Rule 37    if_condition -> error exp RC
Rule 38    if_condition -> RO exp error
Rule 39    nt0_if -> empty
Rule 40    nt1_if -> empty
Rule 41    while -> WHILE while_condition nt0_while stmt
Rule 42    while_condition -> RO exp RC
Rule 43    while_condition -> RO error RC
Rule 44    while_condition -> error exp RC
Rule 45    while_condition -> RO exp error
Rule 46    nt0_while -> empty
Rule 47    exp_int -> INT
Rule 48    exp_int -> MINUS INT
Rule 49    exp_double -> DOUBLE
Rule 50    exp_double -> MINUS DOUBLE
Rule 51    exp -> exp AND exp
Rule 52    exp -> exp OR exp
Rule 53    exp -> NOT exp
Rule 54    exp -> exp EQ EQ exp
Rule 55    exp -> exp MIN exp
Rule 56    exp -> exp MAJ exp
Rule 57    exp -> exp MAJ_EQ exp
Rule 58    exp -> exp EQ_MAJ exp
Rule 59    exp -> exp MIN_EQ exp
Rule 60    exp -> exp EQ_MIN exp
Rule 61    exp -> exp PLUS exp
Rule 62    exp -> exp MINUS exp
Rule 63    exp -> exp STAR exp
Rule 64    exp -> exp DIV exp
Rule 65    exp -> RO exp RC
Rule 66    exp -> exp_double
Rule 67    exp -> exp_int
Rule 68    exp -> id
Rule 69    exp -> RO error RC
Rule 70    id -> ID
Rule 71    id -> ID SO INT SC
Rule 72    id -> ID SO ID SC
Rule 73    empty -> <empty>

Terminals, with rules where they appear

AND                  : 51
BC                   : 21 22 23
BO                   : 21 22 23
CM                   : 11
DIV                  : 64
DOUBLE               : 49 50
DOUBLE_TYPE          : 8
ELSE                 : 32
EMPTY                : 
EQ                   : 26 27 28 29 54 54
EQ_MAJ               : 58
EQ_MIN               : 60
ID                   : 12 13 70 71 72 72
IF                   : 32 33 34
INT                  : 13 47 48 71
INT_TYPE             : 7
MAJ                  : 56
MAJ_EQ               : 57
MIN                  : 55
MINUS                : 48 50 62
MIN_EQ               : 59
NOT                  : 53
OR                   : 52
PLUS                 : 61
PRINT                : 30 31
RC                   : 35 36 37 42 43 44 65 69
RO                   : 35 36 38 42 43 45 65 69
S                    : 4 5 24 25 26 27 28 30 31
SC                   : 13 71 72
SO                   : 13 71 72
STAR                 : 63
WHILE                : 41
error                : 5 6 16 22 23 24 27 28 29 31 34 36 37 38 43 44 45 69
newline              : 
ws                   : 

Nonterminals, with rules where they appear

assignment           : 19
decl                 : 2
decl_list            : 1 2
empty                : 9 39 40 46
exp                  : 26 28 29 35 37 38 42 44 45 51 51 52 52 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65
exp_double           : 66
exp_int              : 67
id                   : 25 26 27 29 30 68
if                   : 17
if_condition         : 32 33 34
m_copy               : 11
nt0_if               : 32 33 34
nt0_while            : 41
nt1_if               : 32 34
print                : 20
prog                 : 0
stmt                 : 14 15 16 32 32 33 34 34 41
stmt_list            : 1 14 21 22
type                 : 4 5 6
var                  : 10 11
var_list             : 4 6 11
while                : 18
while_condition      : 41

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . decl_list stmt_list
    (2) decl_list -> . decl_list decl
    (3) decl_list -> .

    error           reduce using rule 3 (decl_list -> .)
    BO              reduce using rule 3 (decl_list -> .)
    INT_TYPE        reduce using rule 3 (decl_list -> .)
    DOUBLE_TYPE     reduce using rule 3 (decl_list -> .)
    IF              reduce using rule 3 (decl_list -> .)
    WHILE           reduce using rule 3 (decl_list -> .)
    PRINT           reduce using rule 3 (decl_list -> .)
    ID              reduce using rule 3 (decl_list -> .)

    prog                           shift and go to state 1
    decl_list                      shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> decl_list . stmt_list
    (2) decl_list -> decl_list . decl
    (14) stmt_list -> . stmt_list stmt
    (15) stmt_list -> . stmt
    (16) stmt_list -> . error stmt
    (4) decl -> . type var_list S
    (5) decl -> . type error S
    (6) decl -> . type var_list error
    (17) stmt -> . if
    (18) stmt -> . while
    (19) stmt -> . assignment
    (20) stmt -> . print
    (21) stmt -> . BO stmt_list BC
    (22) stmt -> . BO stmt_list error BC
    (23) stmt -> . BO error BC
    (24) stmt -> . error S
    (7) type -> . INT_TYPE
    (8) type -> . DOUBLE_TYPE
    (32) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (33) if -> . IF if_condition nt0_if stmt
    (34) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (41) while -> . WHILE while_condition nt0_while stmt
    (25) assignment -> . id S
    (26) assignment -> . id EQ exp S
    (27) assignment -> . id EQ error S
    (28) assignment -> . error EQ exp S
    (29) assignment -> . id EQ exp error
    (30) print -> . PRINT id S
    (31) print -> . PRINT error S
    (70) id -> . ID
    (71) id -> . ID SO INT SC
    (72) id -> . ID SO ID SC

    error           shift and go to state 6
    BO              shift and go to state 12
    INT_TYPE        shift and go to state 13
    DOUBLE_TYPE     shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt_list                      shift and go to state 3
    decl                           shift and go to state 4
    stmt                           shift and go to state 5
    type                           shift and go to state 7
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 3

    (1) prog -> decl_list stmt_list .
    (14) stmt_list -> stmt_list . stmt
    (17) stmt -> . if
    (18) stmt -> . while
    (19) stmt -> . assignment
    (20) stmt -> . print
    (21) stmt -> . BO stmt_list BC
    (22) stmt -> . BO stmt_list error BC
    (23) stmt -> . BO error BC
    (24) stmt -> . error S
    (32) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (33) if -> . IF if_condition nt0_if stmt
    (34) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (41) while -> . WHILE while_condition nt0_while stmt
    (25) assignment -> . id S
    (26) assignment -> . id EQ exp S
    (27) assignment -> . id EQ error S
    (28) assignment -> . error EQ exp S
    (29) assignment -> . id EQ exp error
    (30) print -> . PRINT id S
    (31) print -> . PRINT error S
    (70) id -> . ID
    (71) id -> . ID SO INT SC
    (72) id -> . ID SO ID SC

    $end            reduce using rule 1 (prog -> decl_list stmt_list .)
    BO              shift and go to state 12
    error           shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 20
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 4

    (2) decl_list -> decl_list decl .

    error           reduce using rule 2 (decl_list -> decl_list decl .)
    BO              reduce using rule 2 (decl_list -> decl_list decl .)
    INT_TYPE        reduce using rule 2 (decl_list -> decl_list decl .)
    DOUBLE_TYPE     reduce using rule 2 (decl_list -> decl_list decl .)
    IF              reduce using rule 2 (decl_list -> decl_list decl .)
    WHILE           reduce using rule 2 (decl_list -> decl_list decl .)
    PRINT           reduce using rule 2 (decl_list -> decl_list decl .)
    ID              reduce using rule 2 (decl_list -> decl_list decl .)


state 5

    (15) stmt_list -> stmt .

    BO              reduce using rule 15 (stmt_list -> stmt .)
    error           reduce using rule 15 (stmt_list -> stmt .)
    IF              reduce using rule 15 (stmt_list -> stmt .)
    WHILE           reduce using rule 15 (stmt_list -> stmt .)
    PRINT           reduce using rule 15 (stmt_list -> stmt .)
    ID              reduce using rule 15 (stmt_list -> stmt .)
    $end            reduce using rule 15 (stmt_list -> stmt .)
    BC              reduce using rule 15 (stmt_list -> stmt .)


state 6

    (16) stmt_list -> error . stmt
    (24) stmt -> error . S
    (28) assignment -> error . EQ exp S
    (17) stmt -> . if
    (18) stmt -> . while
    (19) stmt -> . assignment
    (20) stmt -> . print
    (21) stmt -> . BO stmt_list BC
    (22) stmt -> . BO stmt_list error BC
    (23) stmt -> . BO error BC
    (24) stmt -> . error S
    (32) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (33) if -> . IF if_condition nt0_if stmt
    (34) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (41) while -> . WHILE while_condition nt0_while stmt
    (25) assignment -> . id S
    (26) assignment -> . id EQ exp S
    (27) assignment -> . id EQ error S
    (28) assignment -> . error EQ exp S
    (29) assignment -> . id EQ exp error
    (30) print -> . PRINT id S
    (31) print -> . PRINT error S
    (70) id -> . ID
    (71) id -> . ID SO INT SC
    (72) id -> . ID SO ID SC

    S               shift and go to state 23
    EQ              shift and go to state 24
    BO              shift and go to state 12
    error           shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 22
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 7

    (4) decl -> type . var_list S
    (5) decl -> type . error S
    (6) decl -> type . var_list error
    (10) var_list -> . var
    (11) var_list -> . var_list CM m_copy var
    (12) var -> . ID
    (13) var -> . ID SO INT SC

    error           shift and go to state 26
    ID              shift and go to state 28

    var_list                       shift and go to state 25
    var                            shift and go to state 27

state 8

    (17) stmt -> if .

    BO              reduce using rule 17 (stmt -> if .)
    error           reduce using rule 17 (stmt -> if .)
    IF              reduce using rule 17 (stmt -> if .)
    WHILE           reduce using rule 17 (stmt -> if .)
    PRINT           reduce using rule 17 (stmt -> if .)
    ID              reduce using rule 17 (stmt -> if .)
    $end            reduce using rule 17 (stmt -> if .)
    BC              reduce using rule 17 (stmt -> if .)
    ELSE            reduce using rule 17 (stmt -> if .)


state 9

    (18) stmt -> while .

    BO              reduce using rule 18 (stmt -> while .)
    error           reduce using rule 18 (stmt -> while .)
    IF              reduce using rule 18 (stmt -> while .)
    WHILE           reduce using rule 18 (stmt -> while .)
    PRINT           reduce using rule 18 (stmt -> while .)
    ID              reduce using rule 18 (stmt -> while .)
    $end            reduce using rule 18 (stmt -> while .)
    BC              reduce using rule 18 (stmt -> while .)
    ELSE            reduce using rule 18 (stmt -> while .)


state 10

    (19) stmt -> assignment .

    BO              reduce using rule 19 (stmt -> assignment .)
    error           reduce using rule 19 (stmt -> assignment .)
    IF              reduce using rule 19 (stmt -> assignment .)
    WHILE           reduce using rule 19 (stmt -> assignment .)
    PRINT           reduce using rule 19 (stmt -> assignment .)
    ID              reduce using rule 19 (stmt -> assignment .)
    $end            reduce using rule 19 (stmt -> assignment .)
    BC              reduce using rule 19 (stmt -> assignment .)
    ELSE            reduce using rule 19 (stmt -> assignment .)


state 11

    (20) stmt -> print .

    BO              reduce using rule 20 (stmt -> print .)
    error           reduce using rule 20 (stmt -> print .)
    IF              reduce using rule 20 (stmt -> print .)
    WHILE           reduce using rule 20 (stmt -> print .)
    PRINT           reduce using rule 20 (stmt -> print .)
    ID              reduce using rule 20 (stmt -> print .)
    $end            reduce using rule 20 (stmt -> print .)
    BC              reduce using rule 20 (stmt -> print .)
    ELSE            reduce using rule 20 (stmt -> print .)


state 12

    (21) stmt -> BO . stmt_list BC
    (22) stmt -> BO . stmt_list error BC
    (23) stmt -> BO . error BC
    (14) stmt_list -> . stmt_list stmt
    (15) stmt_list -> . stmt
    (16) stmt_list -> . error stmt
    (17) stmt -> . if
    (18) stmt -> . while
    (19) stmt -> . assignment
    (20) stmt -> . print
    (21) stmt -> . BO stmt_list BC
    (22) stmt -> . BO stmt_list error BC
    (23) stmt -> . BO error BC
    (24) stmt -> . error S
    (32) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (33) if -> . IF if_condition nt0_if stmt
    (34) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (41) while -> . WHILE while_condition nt0_while stmt
    (25) assignment -> . id S
    (26) assignment -> . id EQ exp S
    (27) assignment -> . id EQ error S
    (28) assignment -> . error EQ exp S
    (29) assignment -> . id EQ exp error
    (30) print -> . PRINT id S
    (31) print -> . PRINT error S
    (70) id -> . ID
    (71) id -> . ID SO INT SC
    (72) id -> . ID SO ID SC

    error           shift and go to state 30
    BO              shift and go to state 12
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt_list                      shift and go to state 29
    stmt                           shift and go to state 5
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 13

    (7) type -> INT_TYPE .

    error           reduce using rule 7 (type -> INT_TYPE .)
    ID              reduce using rule 7 (type -> INT_TYPE .)


state 14

    (8) type -> DOUBLE_TYPE .

    error           reduce using rule 8 (type -> DOUBLE_TYPE .)
    ID              reduce using rule 8 (type -> DOUBLE_TYPE .)


state 15

    (32) if -> IF . if_condition nt0_if stmt ELSE nt1_if stmt
    (33) if -> IF . if_condition nt0_if stmt
    (34) if -> IF . if_condition nt0_if stmt error nt1_if stmt
    (35) if_condition -> . RO exp RC
    (36) if_condition -> . RO error RC
    (37) if_condition -> . error exp RC
    (38) if_condition -> . RO exp error

    RO              shift and go to state 33
    error           shift and go to state 32

    if_condition                   shift and go to state 31

state 16

    (41) while -> WHILE . while_condition nt0_while stmt
    (42) while_condition -> . RO exp RC
    (43) while_condition -> . RO error RC
    (44) while_condition -> . error exp RC
    (45) while_condition -> . RO exp error

    RO              shift and go to state 35
    error           shift and go to state 36

    while_condition                shift and go to state 34

state 17

    (25) assignment -> id . S
    (26) assignment -> id . EQ exp S
    (27) assignment -> id . EQ error S
    (29) assignment -> id . EQ exp error

    S               shift and go to state 37
    EQ              shift and go to state 38


state 18

    (30) print -> PRINT . id S
    (31) print -> PRINT . error S
    (70) id -> . ID
    (71) id -> . ID SO INT SC
    (72) id -> . ID SO ID SC

    error           shift and go to state 40
    ID              shift and go to state 19

    id                             shift and go to state 39

state 19

    (70) id -> ID .
    (71) id -> ID . SO INT SC
    (72) id -> ID . SO ID SC

    S               reduce using rule 70 (id -> ID .)
    EQ              reduce using rule 70 (id -> ID .)
    AND             reduce using rule 70 (id -> ID .)
    OR              reduce using rule 70 (id -> ID .)
    MIN             reduce using rule 70 (id -> ID .)
    MAJ             reduce using rule 70 (id -> ID .)
    MAJ_EQ          reduce using rule 70 (id -> ID .)
    EQ_MAJ          reduce using rule 70 (id -> ID .)
    MIN_EQ          reduce using rule 70 (id -> ID .)
    EQ_MIN          reduce using rule 70 (id -> ID .)
    PLUS            reduce using rule 70 (id -> ID .)
    MINUS           reduce using rule 70 (id -> ID .)
    STAR            reduce using rule 70 (id -> ID .)
    DIV             reduce using rule 70 (id -> ID .)
    RC              reduce using rule 70 (id -> ID .)
    error           reduce using rule 70 (id -> ID .)
    SO              shift and go to state 41


state 20

    (14) stmt_list -> stmt_list stmt .

    BO              reduce using rule 14 (stmt_list -> stmt_list stmt .)
    error           reduce using rule 14 (stmt_list -> stmt_list stmt .)
    IF              reduce using rule 14 (stmt_list -> stmt_list stmt .)
    WHILE           reduce using rule 14 (stmt_list -> stmt_list stmt .)
    PRINT           reduce using rule 14 (stmt_list -> stmt_list stmt .)
    ID              reduce using rule 14 (stmt_list -> stmt_list stmt .)
    $end            reduce using rule 14 (stmt_list -> stmt_list stmt .)
    BC              reduce using rule 14 (stmt_list -> stmt_list stmt .)


state 21

    (24) stmt -> error . S
    (28) assignment -> error . EQ exp S

    S               shift and go to state 23
    EQ              shift and go to state 24


state 22

    (16) stmt_list -> error stmt .

    BO              reduce using rule 16 (stmt_list -> error stmt .)
    error           reduce using rule 16 (stmt_list -> error stmt .)
    IF              reduce using rule 16 (stmt_list -> error stmt .)
    WHILE           reduce using rule 16 (stmt_list -> error stmt .)
    PRINT           reduce using rule 16 (stmt_list -> error stmt .)
    ID              reduce using rule 16 (stmt_list -> error stmt .)
    $end            reduce using rule 16 (stmt_list -> error stmt .)
    BC              reduce using rule 16 (stmt_list -> error stmt .)


state 23

    (24) stmt -> error S .
